Refactor User-related DTOs and repositories; replace Users with User entity in multiple classes