@@ -11,45 +11,47 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 
-import com.a5ur4.goldengains.repository.UsersRepository;
-import com.a5ur4.goldengains.entity.Users;
+import com.a5ur4.goldengains.repository.UserRepository;
+import com.a5ur4.goldengains.entity.User;
 
 @Component
 public class SecurityFilter extends OncePerRequestFilter {
 
     private final TokenService tokenService;
-    private final UsersRepository usersRepository;
+    private final UserRepository userRepository;
 
-    public SecurityFilter(TokenService tokenService, UsersRepository usersRepository) {
+    public SecurityFilter(TokenService tokenService, UserRepository userRepository) {
         this.tokenService = tokenService;
-        this.usersRepository = usersRepository;
+        this.userRepository = userRepository;
     }
 
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
             throws ServletException, IOException {
 
-        String token = this.recoveryToken(request);
-        String login = tokenService.validateToken(token);
+        String token = this.recoverToken(request);
 
-        if (login != null) {
-            Users users = usersRepository.findByEmail(login)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+        if (token != null) {
+            String email = tokenService.validateToken(token);
+            Optional<User> userOptional = userRepository.findByEmail(email);
 
-            String role = users.getRole();
-            var authorities = Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role.toUpperCase()));
+            if (userOptional.isPresent()) {
+                User user = userOptional.get();
+                var authorities = List.of(new SimpleGrantedAuthority(user.getRole()));
 
-            var authentication = new UsernamePasswordAuthenticationToken(users, null, authorities);
-            SecurityContextHolder.getContext().setAuthentication(authentication);
+                var authentication = new UsernamePasswordAuthenticationToken(user, null, authorities);
+                SecurityContextHolder.getContext().setAuthentication(authentication);
+            }
         }
 
         filterChain.doFilter(request, response);
     }
 
-    private String recoveryToken(HttpServletRequest request) {
+    private String recoverToken(HttpServletRequest request) {
         String authHeader = request.getHeader("Authorization");
-        return (authHeader != null && authHeader.startsWith("Bearer ")) ? authHeader.replace("Bearer ", "") : null;
+        return (authHeader != null && authHeader.startsWith("Bearer ")) ? authHeader.substring(7) : null;
     }
 }
